--- a/package.json
+++ b/package.json
@@ -19,9 +19,16 @@
     "@types/react-dom": "18.2.4",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
+    "formik": "^2.4.2",
     "next": "13.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.0.4"
+    "react-swipeable-views": "^0.14.0",
+    "typescript": "5.0.4",
+    "yup": "^1.2.0"
+  },
+  "devDependencies": {
+    "@types/react-swipeable-views": "^0.13.2",
+    "@types/react-swipeable-views-utils": "^0.13.4"
   }
 }
