--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.2",
     "@mui/icons-material": "^5.11.16",
+    "@mui/lab": "^5.0.0-alpha.139",
     "@mui/material": "^5.13.3",
+    "@reduxjs/toolkit": "^1.9.5",
     "@types/node": "20.2.5",
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
+    "@types/react-redux": "^7.1.25",
     "axios": "^1.4.0",
+    "babel-loader": "^9.1.3",
     "bcrypt": "^5.1.0",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
@@ -27,6 +31,7 @@
     "next": "13.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-redux": "^8.1.2",
     "react-swipeable-views": "^0.14.0",
     "typescript": "5.0.4",
     "yup": "^1.2.0"
